Fix board size and out of bounds

--- a/snake/css/snake.css
+++ b/snake/css/snake.css
@@ -1,6 +1,6 @@
 figure ul {
   list-style: none;
-  width: 270px;
+  width: 880px;
   font-size: 36px;
   text-align: center;
   font-family: cursive, serif;
@@ -9,8 +9,8 @@ figure ul {
 
 ul > li {
   float: left;
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   border: 1px solid black;
   background-color: #d3d3d3;
 }
